# xo-basic

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
projects/xo-basic/: Cargo.toml
projects/xo-basic/src/: lib.rs
projects/xo-basic/src/ai/: mod.rs
projects/xo-basic/src/game/: board.rs  game.rs  mod.rs  utils.rs
projects/xo-basic/tests/: main.rs
projects/xo-web/: .gitignore  Cargo.toml  index.html  package.json  trunk.toml
projects/xo-web/assets/: main.sass  main.scss
projects/xo-web/i18n/en/: basic.yml
projects/xo-web/i18n/zh-Hant/: basic.yml
projects/xo-web/src/: lib.rs  main.rs
projects/xo-web/src/agents/: global.rs  mod.rs
projects/xo-web/src/ai/: mod.rs
projects/xo-web/src/components/: board.rs  mod.rs
projects/xo-web/src/game/: mod.rs
projects/xo-web/src/localization/: mod.rs
