[package]
name = "xo-basic-web"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.17"
yewtil = "0.3"
dynfmt = { version = "0.1", features = ["curly"] }
serde_yaml = "0.8"
lazy_static = "1.4"
regex = "1.3"
xo-basic = {version = "0.1.0", path = "../xo-basic"}

[dev-dependencies]

[features]
default = []
